--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
-  "private": true,
   "dependencies": {
     "@nx/devkit": "19.4.0",
     "create-nx-workspace": "19.4.0",
@@ -37,5 +36,9 @@
   },
   "nx": {
     "includedScripts": []
-  }
+  },
+  "engines": {
+    "node": "20.14.0"
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
