--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@nx/devkit": "19.4.0",
     "create-nx-workspace": "19.4.0",
-    "tslib": "^2.3.0"
+    "ora": "5.4.1",
+    "tslib": "^2.6.3",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@nx/eslint": "19.4.0",
@@ -21,6 +23,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
+    "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "eslint": "~8.57.0",
