--- a/packages/create-aws-sam-nx/package.json
+++ b/packages/create-aws-sam-nx/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "create-aws-sam-nx",
+  "name": "@aligent/create-aws-sam-nx",
   "version": "0.0.1",
   "dependencies": {
-    "create-nx-workspace": "19.4.0"
+    "create-nx-workspace": "19.4.0",
+    "ora": "^5.4.1",
+    "tslib": "^2.6.3",
+    "yargs": "^17.7.2"
   },
   "type": "commonjs",
   "main": "./src/index.js",
