--- a/packages/aws-sam-nx/package.json
+++ b/packages/aws-sam-nx/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "aws-sam-nx",
+  "name": "@aligent/aws-sam-nx",
   "version": "0.0.1",
   "dependencies": {
     "@nx/devkit": "19.4.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.6.3"
   },
   "type": "commonjs",
   "main": "./src/index.js",
